# statusch-backend

./: .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml
statusch_backend/laundry_room/: listener.py  urls.py
statusch_backend/printer/: urls.py
statusch_backend/statusch/: urls.py
statusch_backend/statusch/settings/: local.py  production.py
statusch_backend/study_room/: urls.py
